--- a/environment.yml
+++ b/environment.yml
@@ -9,12 +9,23 @@ dependencies:
   - click=8.1.7=py311hca03da5_0
   - django=4.1=py311hca03da5_0
   - djangorestframework=3.14.0=pyhd8ed1ab_0
+  - freetype=2.12.1=h1192e45_0
+  - jpeg=9e=h80987f9_1
+  - lcms2=2.12=hba8e193_0
+  - lerc=3.0=hc377ac9_0
   - libcxx=14.0.6=h848a8c0_0
+  - libdeflate=1.17=h80987f9_1
   - libffi=3.4.4=hca03da5_0
+  - libpng=1.6.39=h80987f9_0
+  - libtiff=4.5.1=h313beb8_0
+  - libwebp-base=1.3.2=h80987f9_0
+  - lz4-c=1.9.4=h313beb8_0
   - mysql-connector-c=6.1.11=h4a942e0_1
   - mysqlclient=2.0.3=py311h313beb8_1
   - ncurses=6.4=h313beb8_0
+  - openjpeg=2.3.0=h7a6adac_2
   - openssl=1.1.1w=h1a28f6b_0
+  - pillow=10.2.0=py311h80987f9_0
   - pip=23.3.1=py311hca03da5_0
   - python=3.11.5=hc0d8a6c_0
   - python-dotenv=0.21.0=py311hca03da5_0
@@ -27,6 +38,7 @@ dependencies:
   - wheel=0.41.2=py311hca03da5_0
   - xz=5.4.5=h80987f9_0
   - zlib=1.2.13=h5a0b063_0
+  - zstd=1.5.5=hd90d995_0
   - pip:
       - certifi==2024.2.2
       - cffi==1.16.0
