--- a/environment.yml
+++ b/environment.yml
@@ -3,42 +3,51 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - asgiref=3.5.2=py311hca03da5_0
-  - bzip2=1.0.8=h620ffc9_4
+  - asgiref=3.7.2=pyhd8ed1ab_0
+  - bzip2=1.0.8=h93a5062_5
   - ca-certificates=2023.12.12=hca03da5_0
   - click=8.1.7=py311hca03da5_0
   - django=4.1=py311hca03da5_0
   - djangorestframework=3.14.0=pyhd8ed1ab_0
-  - freetype=2.12.1=h1192e45_0
-  - jpeg=9e=h80987f9_1
-  - lcms2=2.12=hba8e193_0
-  - lerc=3.0=hc377ac9_0
-  - libcxx=14.0.6=h848a8c0_0
-  - libdeflate=1.17=h80987f9_1
-  - libffi=3.4.4=hca03da5_0
-  - libpng=1.6.39=h80987f9_0
-  - libtiff=4.5.1=h313beb8_0
+  - freetype=2.12.1=hadb7bae_2
+  - lcms2=2.16=ha0e7c42_0
+  - lerc=4.0.0=h9a09cb3_0
+  - libcxx=16.0.6=h4653b0c_0
+  - libdeflate=1.19=hb547adb_0
+  - libexpat=2.6.1=hebf3989_0
+  - libffi=3.4.2=h3422bc3_5
+  - libjpeg-turbo=3.0.0=hb547adb_1
+  - libpng=1.6.43=h091b4b1_0
+  - libsqlite=3.45.1=h091b4b1_0
+  - libtiff=4.6.0=ha8a6c65_2
   - libwebp-base=1.3.2=h80987f9_0
-  - lz4-c=1.9.4=h313beb8_0
-  - mysql-connector-c=6.1.11=h4a942e0_1
-  - mysqlclient=2.0.3=py311h313beb8_1
-  - ncurses=6.4=h313beb8_0
-  - openjpeg=2.3.0=h7a6adac_2
-  - openssl=1.1.1w=h1a28f6b_0
-  - pillow=10.2.0=py311h80987f9_0
-  - pip=23.3.1=py311hca03da5_0
-  - python=3.11.5=hc0d8a6c_0
+  - libxcb=1.15=hf346824_0
+  - libzlib=1.2.13=h53f4e23_5
+  - mysql-common=8.3.0=hd1853d3_3
+  - mysql-libs=8.3.0=hf036fc4_3
+  - mysqlclient=2.2.3=py311h92babd0_1
+  - ncurses=6.4=h463b476_2
+  - openjpeg=2.5.2=h9f1df11_0
+  - openssl=3.2.1=h0d3ecfb_0
+  - pillow=10.2.0=py311hb9c5795_0
+  - pip=24.0=pyhd8ed1ab_0
+  - pthread-stubs=0.3=h1a28f6b_1
+  - pyjwt=2.8.0=pyhd8ed1ab_1
+  - python=3.11.8=hdf0ec26_0_cpython
   - python-dotenv=0.21.0=py311hca03da5_0
-  - readline=8.2=h1a28f6b_0
-  - setuptools=68.2.2=py311hca03da5_0
-  - sqlite=3.41.2=h80987f9_0
-  - sqlparse=0.4.4=py311hca03da5_0
-  - tk=8.6.12=hb8d0fd4_0
-  - tzdata=2024a=h04d1e81_0
-  - wheel=0.41.2=py311hca03da5_0
-  - xz=5.4.5=h80987f9_0
-  - zlib=1.2.13=h5a0b063_0
-  - zstd=1.5.5=hd90d995_0
+  - python_abi=3.11=4_cp311
+  - pytz=2024.1=pyhd8ed1ab_0
+  - readline=8.2=h92ec313_1
+  - setuptools=69.1.1=pyhd8ed1ab_0
+  - sqlparse=0.4.4=pyhd8ed1ab_0
+  - tk=8.6.13=h5083fa2_1
+  - typing_extensions=4.10.0=pyha770c72_0
+  - tzdata=2024a=h0c530f3_0
+  - wheel=0.42.0=pyhd8ed1ab_0
+  - xorg-libxau=1.0.11=hb547adb_0
+  - xorg-libxdmcp=1.1.3=h27ca646_0
+  - xz=5.2.6=h57fd34a_0
+  - zstd=1.5.5=h4f39d0f_0
   - pip:
       - certifi==2024.2.2
       - cffi==1.16.0
@@ -51,9 +60,7 @@ dependencies:
       - idna==3.6
       - oauthlib==3.2.2
       - pycparser==2.21
-      - pyjwt==2.8.0
       - python3-openid==3.2.0
-      - pytz==2024.1
       - requests==2.31.0
       - requests-oauthlib==1.3.1
       - social-auth-app-django==5.4.0
