--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,39 @@ services:
     ports:
       - "13306:3306"
     environment:
-      - MYSQL_USER=${db_user}
-      - MYSQL_PASSWORD=${db_password}
+      - MYSQL_ROOT_PASSWORD=${db_password}
       - MYSQL_DATABASE=${db_name}
     networks:
-      mini-ecommerce-bridge:
+      backend-network:
+        ipv4_address: 172.18.0.2
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
   django-api:
     container_name: mini-ecommerce-api
     build:
       context: .
     image: yanpin0524/mini-ecommerce-api
     ports:
-      - "8080:8080"
-    command: ./wait-for-it.sh mini-ecommerce-db:13306 -- python manage.py runserver
+      - "8000:8000"
+    environment:
+      - django_secret_key=${django_secret_key}
+      - db_host=${db_host}
+      - db_port=${db_port}
+      - db_user=${db_user}
+      - db_password=${db_password}
+      - db_name=${db_name}
+    networks:
+      - backend-network
+    depends_on:
+      mysql-db:
+        condition: service_healthy
+
+networks:
+  backend-network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.18.0.0/16
+          gateway: 172.18.0.1
