--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,12 +22,10 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - django_secret_key=${django_secret_key}
-      - db_host=${db_host}
-      - db_port=${db_port}
-      - db_user=${db_user}
-      - db_password=${db_password}
-      - db_name=${db_name}
+      - db_host=172.18.0.2
+      - db_port=3306
+    env_file:
+      - .env
     networks:
       - backend-network
     depends_on:
