--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 #setting
-django_secret_key=
+django_secret_key = 
+allowed_hosts = []
+DEBUG = 
 
 #database
-db_host =
-db_port =
-db_name=
-db_user=
-db_password= 
+db_host = 
+db_port = 
+db_name = 
+
+db_user = 
+db_password = 
