--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ readme = "README.md"
 python = "^3.11.8"
 django = "^4.1"
 djangorestframework = "^3.15.1"
-mysqlclient = "^2.2.4"
 djangorestframework-simplejwt = "^5.3.1"
 djoser = "^2.2.2"
 pillow = "^10.2.0"
 python-dotenv = "^1.0.1"
+pymysql = "^1.1.0"
 
 
 [build-system]
