--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
+djlint = "^1.34.1"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
