--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ python-dotenv = "^1.0.1"
 pre-commit = "^3.7.0"
 djlint = "^1.34.1"
 django-seed = "^0.3.1"
+psycopg2-binary = "^2.9.9"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
