--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pre-commit = "^3.7.0"
 djlint = "^1.34.1"
 django-seed = "^0.3.1"
 psycopg2-binary = "^2.9.9"
+faker = "^25.0.1"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
