--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
-#setting
-django_secret_key =
-allowed_hosts = []
-DEBUG =
+#django settings
+DJANGO_SECRET_KEY =
+ALLOWED_HOSTS =
+DEBUG_MODE =
 
-#database
-db_host =
-db_port =
-db_name =
+#database configuration
+MYSQL_HOST =
+MYSQL_PORT =
 
-db_user =
-db_password =
+MYSQL_USERNAME =
+MYSQL_PASSWORD =
+
+DATABASE_NAME =
