--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 asgiref==3.8.1 ; python_full_version >= "3.11.8" and python_version < "4.0" \
     --hash=sha256:3e1e3ecc849832fe52ccf2cb6686b7a55f82bb1d6aee72a58826471390335e47 \
     --hash=sha256:c343bd80a0bec947a9860adb4c432ffa7db769836c64238fc34bdc3fec84d590
+boto3==1.34.107 ; python_full_version >= "3.11.8" and python_full_version < "4.0.0" \
+    --hash=sha256:2500963ddd7fee0c891db596ed73f203a62e8ee6faf1543c7a14169b1d557bc3 \
+    --hash=sha256:a7280f54babc8e285d85d2558dd6167e4deb069e03abe43a55b643e10c03952b
+botocore==1.34.107 ; python_full_version >= "3.11.8" and python_full_version < "4.0.0" \
+    --hash=sha256:4620286a814c3c8abc59145203650a6b2a4f538e887552fa1bc6896b6d11b28b \
+    --hash=sha256:98bfab930391a21d24ed7a7bc86ec2ec076607318ab8de0c37d2587f73a88d89
 certifi==2024.2.2 ; python_full_version >= "3.11.8" and python_version < "4.0" \
     --hash=sha256:0569859f95fc761b18b45ef421b1290a0f65f147e92a1e5eb3e635f9a5e4e66f \
     --hash=sha256:dc383c07b76109f368f6106eee2b593b04a011ea4d55f652c6ca24a754d1cdd1
@@ -186,6 +192,9 @@ defusedxml==0.7.1 ; python_full_version >= "3.11.8" and python_version < "4.0" \
     --hash=sha256:a352e7e428770286cc899e2542b6cdaedb2b4953ff269a210103ec58f6198a61
 django-seed==0.3.1 ; python_full_version >= "3.11.8" and python_full_version < "4.0.0" \
     --hash=sha256:93e65d2c10449c464b83e9031be02763ec10e786aa064d649c4dd5ad06fa0eea
+django-storages==1.14.3 ; python_full_version >= "3.11.8" and python_full_version < "4.0.0" \
+    --hash=sha256:31f263389e95ce3a1b902fb5f739a7ed32895f7d8b80179fe7453ecc0dfe102e \
+    --hash=sha256:95a12836cd998d4c7a4512347322331c662d9114c4344f932f5e9c0fce000608
 django-templated-mail==1.1.1 ; python_full_version >= "3.11.8" and python_version < "4.0" \
     --hash=sha256:8db807effebb42a532622e2d142dfd453dafcd0d7794c4c3332acb90656315f9 \
     --hash=sha256:f7127e1e31d7cad4e6c4b4801d25814d4b8782627ead76f4a75b3b7650687556
@@ -207,6 +216,9 @@ faker==25.2.0 ; python_full_version >= "3.11.8" and python_full_version < "4.0.0
 idna==3.7 ; python_full_version >= "3.11.8" and python_version < "4.0" \
     --hash=sha256:028ff3aadf0609c1fd278d8ea3089299412a7a8b9bd005dd08b9f8285bcb5cfc \
     --hash=sha256:82fee1fc78add43492d3a1898bfa6d8a904cc97d8427f683ed8e798d07761aa0
+jmespath==1.0.1 ; python_full_version >= "3.11.8" and python_full_version < "4.0.0" \
+    --hash=sha256:02e2e4cc71b5bcab88332eebf907519190dd9e6e82107fa7f83b1003a6252980 \
+    --hash=sha256:90261b206d6defd58fdd5e85f478bf633a2901798906be2ad389150c5c60edbe
 oauthlib==3.2.2 ; python_full_version >= "3.11.8" and python_version < "4.0" \
     --hash=sha256:8139f29aac13e25d502680e9e19963e83f16838d48a0d71c287fe40e7067fbca \
     --hash=sha256:9859c40929662bec5d64f34d01c99e093149682a3f38915dc0655d5a633dd918
@@ -377,6 +389,9 @@ requests-oauthlib==2.0.0 ; python_full_version >= "3.11.8" and python_version < 
 requests==2.31.0 ; python_full_version >= "3.11.8" and python_version < "4.0" \
     --hash=sha256:58cd2187c01e70e6e26505bca751777aa9f2ee0b7f4300988b709f44e013003f \
     --hash=sha256:942c5a758f98d790eaed1a29cb6eefc7ffb0d1cf7af05c3d2791656dbd6ad1e1
+s3transfer==0.10.1 ; python_full_version >= "3.11.8" and python_full_version < "4.0.0" \
+    --hash=sha256:5683916b4c724f799e600f41dd9e10a9ff19871bf87623cc8f491cb4f5fa0a19 \
+    --hash=sha256:ceb252b11bcf87080fb7850a224fb6e05c8a776bab8f2b64b7f25b969464839d
 six==1.16.0 ; python_full_version >= "3.11.8" and python_full_version < "4.0.0" \
     --hash=sha256:1e61c37477a1626458e36f7b1d82aa5c9b094fa4802892072e49de9c60c4c926 \
     --hash=sha256:8abb2f1d86890a2dfb989f9a77cfcfd3e47c2a354b01111771326f8aa26e0254
