--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ django-seed = "^0.3.1"
 psycopg2-binary = "^2.9.9"
 boto3 = "^1.34.107"
 django-storages = "^1.14.3"
+sentry-sdk = {extras = ["django"], version = "^2.2.0"}
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
