--- a/requirements.txt
+++ b/requirements.txt
@@ -392,6 +392,9 @@ requests==2.31.0 ; python_full_version >= "3.11.8" and python_version < "4.0" \
 s3transfer==0.10.1 ; python_full_version >= "3.11.8" and python_full_version < "4.0.0" \
     --hash=sha256:5683916b4c724f799e600f41dd9e10a9ff19871bf87623cc8f491cb4f5fa0a19 \
     --hash=sha256:ceb252b11bcf87080fb7850a224fb6e05c8a776bab8f2b64b7f25b969464839d
+sentry-sdk[django]==2.2.0 ; python_full_version >= "3.11.8" and python_full_version < "4.0.0" \
+    --hash=sha256:674f58da37835ea7447fe0e34c57b4a4277fad558b0a7cb4a6c83bcb263086be \
+    --hash=sha256:70eca103cf4c6302365a9d7cf522e7ed7720828910eb23d43ada8e50d1ecda9d
 six==1.16.0 ; python_full_version >= "3.11.8" and python_full_version < "4.0.0" \
     --hash=sha256:1e61c37477a1626458e36f7b1d82aa5c9b094fa4802892072e49de9c60c4c926 \
     --hash=sha256:8abb2f1d86890a2dfb989f9a77cfcfd3e47c2a354b01111771326f8aa26e0254
