🐳 chore: 更新 .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,4 @@
-#django settings
-DJANGO_SECRET_KEY =
-ALLOWED_HOSTS =
-DEBUG_MODE =
-
-#database configuration
+#MySQL
 MYSQL_HOST =
 MYSQL_PORT =
 
@@ -11,3 +6,15 @@ MYSQL_USERNAME =
 MYSQL_PASSWORD =
 
 DATABASE_NAME =
+
+# AWS S3
+AWS_ACCESS_KEY_ID =
+AWS_SECRET_ACCESS_KEY =
+AWS_STORAGE_BUCKET_NAME =
+AWS_S3_REGION_NAME =
+
+# 綠界金流
+MERCHANTID=
+HASHKEY=
+HASHIV=
+HOST=
