--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pymysql = "^1.1.0"
 python = "^3.11.8"
 python-dotenv = "^1.0.1"
 sentry-sdk = {extras = ["django"], version = "^2.2.0"}
+drf-spectacular = "^0.27.2"
 
 [tool.poetry.group.dev.dependencies]
 djlint = "^1.34.1"
