--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     ports:
       - "13306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=${db_password}
-      - MYSQL_DATABASE=${db_name}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_DATABASE=${DATABASE_NAME}
     networks:
       backend-network:
         ipv4_address: 172.18.0.2
     healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
   django-app:
@@ -22,8 +22,8 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - db_host=172.18.0.2
-      - db_port=3306
+      - MYSQL_HOST=172.18.0.2
+      - MYSQL_PORT=3306
     env_file:
       - .env
     networks:
